# flups

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
andor_c/: 191010_Niko_hbin_C_win10.pgm  240604_FLUPS_Andor_SP.pgm  290121_FLUPS_Andor_SP_v1.0.pgm  test_fix.pgm
andor_c/old/: 290121_FLUPS_Andor_SP.pgm
scratch/: gen_calib.py  gen_refspec.py
scratch/debug_asc/: 221022_run01.out  221025_run11.out  221025_run11.txt  221025_run11_t1.out  221025_run11_wtstep.txt  DANS_chex_106_v_sig0001.asc  DANS_de_105_h_sig0005.asc  debug_load_asc_series.py
src/flups/: __init__.py  analysis.py  calib.py  calibrations.yaml  collect_asc.py  io.py  plot_utils.py  quick_xcorr.py  refspec_Gerecke_RSI_2016.toml
