[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FLUPS"
version = "0.2"
description = "Tools for the processing and analysis of FLUPS data."
authors = [
    { name = "S. Palato"}
]
license = { text = "" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "matplotlib",
    "lmfit",
    "scipy",
    "pyyaml",
    "toml"
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
